--- a/app/src/main/res/layout/activity_venue_info.xml
+++ b/app/src/main/res/layout/activity_venue_info.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content"
         android:text="Venue Name: "
         android:padding="15dp"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
     <EditText
         android:id="@+id/et_info_venue_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
+        android:paddingTop="@dimen/input_text_padding_top"
+        android:paddingBottom="@dimen/input_text_padding_bottom" />
 
-        />
 
     <TextView
         android:id="@+id/tv_info_venue_manager"
@@ -26,14 +28,16 @@
         android:layout_height="wrap_content"
         android:text="Venue manager: "
         android:padding="15dp"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
     <EditText
         android:id="@+id/et_info_venue_manager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
+        android:paddingTop="@dimen/input_text_padding_top"
+        android:paddingBottom="@dimen/input_text_padding_bottom" />
 
-        />
 
     <TextView
         android:id="@+id/tv_info_num_grounds"
@@ -41,14 +45,16 @@
         android:layout_height="wrap_content"
         android:text="Number of grounds: "
         android:padding="15dp"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
     <EditText
         android:id="@+id/et_info_num_grounds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberSigned"
+        android:paddingTop="@dimen/input_text_padding_top"
+        android:paddingBottom="@dimen/input_text_padding_bottom" />
 
-        />
 
     <TextView
         android:id="@+id/tv_info_venue_location"
@@ -56,7 +62,9 @@
         android:layout_height="wrap_content"
         android:text="Venue location: "
         android:padding="15dp"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
+
 
     <TextView
         android:id="@+id/tv_info_venue_opening_time"
@@ -65,7 +73,9 @@
         android:text="Opening time: "
         android:padding="15dp"
         android:visibility="gone"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
+
 
     <TextView
         android:id="@+id/tv_info_venue_type"
@@ -74,5 +84,7 @@
         android:text="Venue type: "
         android:padding="15dp"
         android:visibility="gone"
-        />
+        android:paddingLeft="@dimen/text_view_padding_left"
+        android:paddingRight="@dimen/text_view_padding_right" />
+
 </LinearLayout>
