--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -34,7 +34,10 @@
                     android:ems="10"
                     android:hint="Name"
                     android:inputType="textPersonName"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:paddingTop="@dimen/input_text_padding_top"
+                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -47,7 +50,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="User Handle"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:paddingTop="@dimen/input_text_padding_top"
+                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -60,7 +66,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Email"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:paddingTop="@dimen/input_text_padding_top"
+                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -73,7 +82,10 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:paddingTop="@dimen/input_text_padding_top"
+                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -86,24 +98,29 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="Confirm Password"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:paddingTop="@dimen/input_text_padding_top"
+                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+
             </android.support.design.widget.TextInputLayout>
 
             <Spinner
                 android:id="@+id/sex"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:entries="@array/sex_list" />
+                android:entries="@array/sex_list"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
 
             <Spinner
                 android:id="@+id/language"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:entries="@array/languages_list" />
+                android:entries="@array/languages_list"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,7 +134,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorButtons"/>
+                    android:textColor="@color/colorButtonText"
+                    android:background="@color/colorButtons"
+                    android:paddingLeft="@dimen/button_padding_text_left_right"
+                    android:paddingRight="@dimen/button_padding_text_left_right"
+                    android:height="@dimen/button_padding_height"  />
 
                 <Button
                     android:id="@+id/button_cancel"
@@ -125,10 +146,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/colorButtons"/>
-                    />
+                    android:background="@color/colorButtons"
+                    android:textColor="@color/colorButtonText"
+                    android:paddingLeft="@dimen/button_padding_text_left_right"
+                    android:paddingRight="@dimen/button_padding_text_left_right"
+                    android:height="@dimen/button_padding_height" />
+
             </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
+
 </LinearLayout>
