--- a/app/src/main/res/layout/request_team_card.xml
+++ b/app/src/main/res/layout/request_team_card.xml
@@ -10,7 +10,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
     android:orientation="horizontal"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true" >
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rl_request_card"
@@ -19,9 +19,7 @@
         android:background="@color/colorLightBackground"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:padding="16dp"
-
-        >
+        android:padding="16dp" >
 
         <TextView
             android:id="@+id/tv_request_team_card_title"
@@ -30,12 +28,14 @@
             android:layout_marginTop="8dp"
             android:text="Team Invitation"
             android:textColor="@color/colorPrimary"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -44,7 +44,9 @@
                 android:layout_marginTop="8dp"
                 android:text="Team:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
 
             <TextView
                 android:id="@+id/tv_request_team_card_team"
@@ -54,13 +56,15 @@
                 android:text="TeamName"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
-                />
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal" >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -69,7 +73,9 @@
                 android:layout_marginTop="8dp"
                 android:text="Team Admin:"
                 android:textColor="@color/colorPrimary"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
 
             <TextView
                 android:id="@+id/tv_request_team_card_admin"
@@ -79,7 +85,9 @@
                 android:text="AdminHandle"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
-                />
+                android:paddingLeft="@dimen/text_view_padding_left"
+                android:paddingRight="@dimen/text_view_padding_right" />
+
         </LinearLayout>
 
 
@@ -89,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginTop="8dp"
-            android:padding="8dp">
+            android:padding="8dp" >
 
             <Button
                 android:id="@+id/btn_request_team_card_decline"
@@ -97,7 +105,10 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorLightBackground"
                 android:text="Decline"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorPrimaryDark"
+                android:paddingLeft="@dimen/button_padding_text_left_right"
+                android:paddingRight="@dimen/button_padding_text_left_right"
+                android:height="@dimen/button_padding_height" />
 
             <Button
 
@@ -106,10 +117,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorLightBackground"
                 android:text="Accept"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorPrimaryDark"
+                android:paddingLeft="@dimen/button_padding_text_left_right"
+                android:paddingRight="@dimen/button_padding_text_left_right"
+                android:height="@dimen/button_padding_height" />
 
         </LinearLayout>
 
-
     </LinearLayout>
+
 </android.support.v7.widget.CardView>
