--- a/app/src/main/res/layout/team_card.xml
+++ b/app/src/main/res/layout/team_card.xml
@@ -10,7 +10,7 @@
     android:layout_marginRight="10dp"
     android:layout_marginTop="5dp"
     android:orientation="horizontal"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true" >
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         android:gravity="center_vertical"
         android:orientation="vertical"
 
-        android:padding="12dp">
+        android:padding="12dp" >
 
 
         <TextView
@@ -28,7 +28,9 @@
             android:layout_height="wrap_content"
             android:text="Team Name"
             android:textColor="@color/colorPrimary"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right" />
 
         <TextView
             android:id="@+id/tv_team_card_info_admin"
@@ -39,8 +41,8 @@
             android:text="Admin: "
             android:textColor="#727272"
             android:textSize="14sp"
-
-            />
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right" />
 
         <TextView
             android:id="@+id/tv_team_card_admin"
@@ -51,10 +53,10 @@
             android:text="TeamAdmin"
             android:textColor="@color/colorPrimary"
             android:layout_toRightOf="@+id/tv_team_card_info_admin"
-            android:textSize="14sp" />
-
+            android:textSize="14sp"
+            android:paddingLeft="@dimen/text_view_padding_left"
+            android:paddingRight="@dimen/text_view_padding_right" />
 
     </RelativeLayout>
-
 
 </android.support.v7.widget.CardView>
