--- a/app/src/main/res/layout/activity_create_game.xml
+++ b/app/src/main/res/layout/activity_create_game.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary" >
@@ -24,7 +25,7 @@
             android:paddingRight="@dimen/text_view_padding_right"
             android:text="Pick your team"
             android:textColor="@color/textLight"
-            android:textSize="@dimen/font_size_body_english" />
+            android:textSize="@dimen/font_size_app_bar" />
 
         <TextView
             android:id="@+id/tv_create_game_challenged_team"
@@ -35,7 +36,7 @@
             android:paddingRight="@dimen/text_view_padding_right"
             android:text="Pick a team to challenge"
             android:textColor="@color/textLight"
-            android:textSize="@dimen/font_size_body_english" />
+            android:textSize="@dimen/font_size_app_bar" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +52,7 @@
                 android:paddingRight="@dimen/text_view_padding_right"
                 android:text="Pick a date"
                 android:textColor="@color/textLight"
-                android:textSize="@dimen/font_size_body_english" />
+                android:textSize="@dimen/font_size_app_bar" />
 
 
             <TextView
@@ -64,7 +65,7 @@
                 android:paddingRight="@dimen/text_view_padding_right"
                 android:text="Pick a time"
                 android:textColor="@color/textLight"
-                android:textSize="@dimen/font_size_body_english" />
+                android:textSize="@dimen/font_size_app_bar" />
 
 
         </LinearLayout>
@@ -74,11 +75,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp"
             android:entries="@array/sports"
+            android:paddingBottom="16dp"
             android:paddingLeft="@dimen/text_view_padding_left"
-            android:paddingRight="@dimen/text_view_padding_right" >
+            android:paddingRight="@dimen/text_view_padding_right"
+            android:paddingTop="16dp">
 
         </Spinner>
 
@@ -92,9 +93,9 @@
             android:paddingRight="@dimen/text_view_padding_right"
             android:singleLine="true"
             android:text="Add venue"
-            android:textSize="@dimen/font_size_body_english"
-            android:textColor="@color/textLight" />
-
+            android:textColor="@color/textLight"
+            android:textSize="@dimen/font_size_app_bar" />
 
     </LinearLayout>
+
 </ScrollView>
