--- a/app/src/main/res/layout/activity_venues.xml
+++ b/app/src/main/res/layout/activity_venues.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/colorPrimary">
+
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rv_venue_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.c50x.eleos.activities.VenuesActivity">
+    android:scrollbars="vertical"
+    />
+</LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+
