--- a/app/src/main/res/layout/activity_edit_player_info.xml
+++ b/app/src/main/res/layout/activity_edit_player_info.xml
@@ -1,192 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+  <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary" >
+    android:background="@color/colorPrimary"
+    android:layout_width="match_parent">
 
 
-    <LinearLayout
+
+<LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="381dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="3dp">
+       >
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view_user_image_edit"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="5dp"
-            android:elevation="12dp"
-            android:innerRadius="0dp"
-            android:shape="ring"
-            android:thicknessRatio="1.9">
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/img_user_edit"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/noodles"
+        app:civ_border_width="1dp"
+        app:civ_border_color="#FF000000"/>
 
-            <ImageView
-                android:id="@+id/img_user_edit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/noodles" />
-        </android.support.v7.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="352dp"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="70dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="83dp" >
+        android:layout_width="390dp"
+        android:layout_height="717dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_player_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="@dimen/text_view_padding_right"
                     android:text="Name "
                     android:textColor="@color/textLight"
-                    android:textSize="@dimen/font_size_app_bar"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="@dimen/text_view_padding_right"/>
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <EditText
                     android:id="@+id/et_player_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:layout_margin="16dp"
+                    android:paddingBottom="@dimen/input_text_padding_bottom"
+                    android:paddingLeft="16dp"
                     android:paddingTop="@dimen/input_text_padding_top"
-                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+                    android:textColor="@color/textLight"
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <TextView
                     android:id="@+id/tv_player_handle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:paddingLeft="@dimen/text_view_padding_left"
+                    android:paddingRight="@dimen/text_view_padding_right"
                     android:text="Handle "
                     android:textColor="@color/textLight"
-                    android:textSize="@dimen/font_size_app_bar"
-                    android:paddingLeft="@dimen/text_view_padding_left"
-                    android:paddingRight="@dimen/text_view_padding_right" />
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <EditText
                     android:id="@+id/et_player_handle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:layout_margin="16dp"
+                    android:paddingBottom="@dimen/input_text_padding_bottom"
                     android:paddingTop="@dimen/input_text_padding_top"
-                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+                    android:textColor="@color/textLight"
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <TextView
                     android:id="@+id/tv_player_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:paddingLeft="@dimen/text_view_padding_left"
+                    android:paddingRight="@dimen/text_view_padding_right"
                     android:text="Email "
                     android:textColor="@color/textLight"
-                    android:textSize="@dimen/font_size_app_bar"
-                    android:paddingLeft="@dimen/text_view_padding_left"
-                    android:paddingRight="@dimen/text_view_padding_right"/>
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <EditText
                     android:id="@+id/et_player_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:layout_margin="16dp"
+                    android:paddingBottom="@dimen/input_text_padding_bottom"
                     android:paddingTop="@dimen/input_text_padding_top"
-                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+                    android:textColor="@color/textLight"
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <TextView
                     android:id="@+id/tv_player_dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:paddingLeft="@dimen/text_view_padding_left"
+                    android:paddingRight="@dimen/text_view_padding_right"
                     android:text="Date of birth "
                     android:textColor="@color/textLight"
-                    android:textSize="@dimen/font_size_app_bar"
-                    android:paddingLeft="@dimen/text_view_padding_left"
-                    android:paddingRight="@dimen/text_view_padding_right" />
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <EditText
                     android:id="@+id/et_player_dob"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:layout_margin="16dp"
+                    android:paddingBottom="@dimen/input_text_padding_bottom"
                     android:paddingTop="@dimen/input_text_padding_top"
-                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+                    android:textColor="@color/textLight"
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <TextView
                     android:id="@+id/tv_player_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:paddingLeft="@dimen/text_view_padding_left"
+                    android:paddingRight="@dimen/text_view_padding_right"
                     android:text="Gender "
                     android:textColor="@color/textLight"
-                    android:textSize="@dimen/font_size_app_bar"
-                    android:paddingLeft="@dimen/text_view_padding_left"
-                    android:paddingRight="@dimen/text_view_padding_right" />
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <EditText
                     android:id="@+id/et_player_gender"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:textSize="18dp"
+                    android:layout_margin="16dp"
+                    android:paddingBottom="@dimen/input_text_padding_bottom"
                     android:paddingTop="@dimen/input_text_padding_top"
-                    android:paddingBottom="@dimen/input_text_padding_bottom" />
+                    android:textColor="@color/textLight"
+                    android:textSize="@dimen/font_size_app_bar" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btn_edit_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
-                        android:text="Edit"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="16dp"
-                        tools:layout_editor_absoluteY="5dp"
+                        android:height="@dimen/button_padding_height"
                         android:paddingLeft="@dimen/button_padding_text_left_right"
                         android:paddingRight="@dimen/button_padding_text_left_right"
-                        android:height="@dimen/button_padding_height" />
+                        android:text="Edit" />
 
                     <Button
                         android:id="@+id/btn_confirm_edit_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="confirm"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="132dp"
-                        tools:layout_editor_absoluteY="5dp"
                         android:layout_marginStart="35dp"
                         android:layout_marginTop="5dp"
+                        android:height="@dimen/button_padding_height"
                         android:paddingLeft="@dimen/button_padding_text_left_right"
                         android:paddingRight="@dimen/button_padding_text_left_right"
-                        android:height="@dimen/button_padding_height" />
+                        android:text="confirm" />
 
                     <Button
                         android:id="@+id/btn_cancel_edit_info"
@@ -194,13 +180,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="40dp"
                         android:layout_marginTop="5dp"
-                        android:text="cancel"
-                        tools:ignore="MissingConstraints"
-                        tools:layout_editor_absoluteX="256dp"
-                        tools:layout_editor_absoluteY="5dp"
+                        android:height="@dimen/button_padding_height"
                         android:paddingLeft="@dimen/button_padding_text_left_right"
                         android:paddingRight="@dimen/button_padding_text_left_right"
-                        android:height="@dimen/button_padding_height" />
+                        android:text="cancel" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -208,4 +191,5 @@
 
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
